syntax = "proto3";

package dcl;

message BigInt {
    string value = 1;
}
  
message Items {
    repeated Item items = 1;
}

message Item {
    string id = 1;
    string rarity = 2;
    BigInt max_supply = 3;
    BigInt total_supply = 4;
    BigInt price = 5;
    string beneficiary = 6;
    string metadata = 7;
    string content_hash = 8;
    BigInt blockchain_item_id = 9;
    string collection_id = 10;
    uint64 created_at = 11;
    string item_type = 12;
    string name = 13;
    string description = 14;
    string category = 15;
    string body_shapes = 16;
}

message Collections {
    repeated Collection collections = 1;
}

message Collection {
    string address = 1;
    string name = 2;
    string symbol = 3;
    string creator = 4;
    string owner = 5;
    bool is_completed = 6;
    bool is_approved = 7;
    uint64 created_at = 8;
}

message NFTs {
    repeated NFT nfts = 1;
}
  
message NFT {
    string beneficiary = 1;
    BigInt tokenId = 2;
    string itemId = 3;
    BigInt issuedId = 4;
    string collection_address = 5;
    uint64 created_at = 6;
    uint64 updated_at = 7;
}

message Transfers {
    repeated Transfer transfers = 1;
}

message Transfer {
    string from = 1;
    string to = 2;
    BigInt token_id = 3;
    string collection_id = 4;
    uint64 created_at = 5;
    string tx_hash = 6;
    uint32 log_index = 7;
}

message LandTransfers {
    repeated LandTransfer landTransfers = 1;
}

message LandTransfer {
    string from = 1;
    string to = 2;
    BigInt asset_id = 3;
}

message CompletedCollections {
    repeated string completed_collections = 1;
}

message Block {
    uint64 number = 1;
    uint64 timestamp = 2;
}
